Bug 1092626 - Don't try to restore the scroll position if the frame is still dirty or has dirty children.  r=roc a=lizzard